cabal-version: 1.12

name:           notessridca
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/srid/notes.srid.ca>
homepage:       https://github.com/srid/notes.srid.ca#readme
bug-reports:    https://github.com/srid/notes.srid.ca/issues
author:         Sridhar Ratnakumar
maintainer:     srid@srid.ca
copyright:      2019 Sridhar Ratnakumar
license:        BSD3
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/srid/notes.srid.ca

executable notessridca
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , binary
    , bytestring
    , clay
    , cmdargs
    , containers
    , fsnotify
    , http-types
    , lens
    , lens-aeson
    , mustache
    , pandoc
    , reflex-dom-core
    , safe
    , shake
    , slick
    , text
    , time
    , wai
    , wai-app-static
    , wai-extra
    , warp
  default-language: Haskell2010
