cabal-version: 2.2
name: rib
version: 0.5.0.0
license: BSD-3-Clause
copyright: 2019 Sridhar Ratnakumar
maintainer: srid@srid.ca
author: Sridhar Ratnakumar
homepage: https://github.com/srid/rib#readme
bug-reports: https://github.com/srid/rib/issues
synopsis:
    Static site generator using Shake
description:
    Haskell library for writing your own static site generator
category: Web
build-type: Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/srid/rib

library
    exposed-modules:
        Rib
        Rib.App
        Rib.Markup
        Rib.Markup.MMark
        Rib.Markup.Pandoc
        Rib.Server
        Rib.Shake
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    build-depends:
        aeson >=1.4.2 && <1.5,
        async,
        base >=4.7 && <5,
        binary >=0.8.6 && <0.9,
        bytestring >=0.10.8 && <0.11,
        clay >=0.13.1 && <0.14,
        cmdargs >=0.10.20 && <0.11,
        containers >=0.6.0 && <0.7,
        data-default >=0.7.1 && <0.8,
        directory >= 1.0 && <2.0,
        foldl,
        fsnotify >=0.3.0 && <0.4,
        http-types >=0.12.3 && <0.13,
        lens,
        lens-aeson >=1.0.2 && <1.1,
        lucid >=2.9.11 && <2.10,
        megaparsec,
        mmark,
        mmark-ext,
        modern-uri,
        mtl >=2.2.2 && <2.3,
        named,
        pandoc >=2.7 && <3,
        pandoc-include-code >=1.4.0 && <1.5,
        pandoc-types >=1.17.5 && <1.18,
        safe >=0.3.17 && <0.4,
        shake,
        skylighting,
        text >=1.2.3 && <1.3,
        time >=1.8.0 && <1.9,
        wai >=3.2.2 && <3.3,
        wai-app-static >=3.1.6 && <3.2,
        wai-extra,
        warp
