cabal-version: 2.2
name: rib
version: 0.7.0.0
license: BSD-3-Clause
copyright: 2019 Sridhar Ratnakumar
maintainer: srid@srid.ca
author: Sridhar Ratnakumar
homepage: https://github.com/srid/rib#readme
bug-reports: https://github.com/srid/rib/issues
synopsis:
    Static site generator using Shake
description:
    Haskell static site generator that aims to reuse existing libraries instead of reinventing the wheel
category: Web
build-type: Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/srid/rib

library
    exposed-modules:
        Rib
        Rib.App
        Rib.Parser.Dhall
        Rib.Parser.MMark
        Rib.Parser.Pandoc
        Rib.Route
        Rib.Shake
        Rib.Extra.CSS
    other-modules:
        Rib.Server
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    build-depends:
        aeson >=1.4.2 && <1.5,
        async,
        base-noprelude >=4.7 && <5,
        binary >=0.8.6 && <0.9,
        clay >=0.14 && <0.15,
        cmdargs >=0.10.20 && <0.11,
        containers >=0.6.0 && <0.7,
        dhall,
        directory >= 1.0 && <2.0,
        exceptions,
        foldl,
        fsnotify >=0.3.0 && <0.4,
        lucid >=2.9.11 && <2.10,
        megaparsec >= 8.0,
        mmark >= 0.0.7.2,
        mmark-ext,
        modern-uri,
        mtl >=2.2.2 && <2.3,
        pandoc >=2.7 && <3,
        pandoc-include-code >=1.4.0 && <1.5,
        pandoc-types >=1.17.5 && <1.18,
        path >= 0.7.0,
        path-io >= 1.6.0,
        relude >= 0.6 && < 0.7,
        safe-exceptions,
        shake >= 0.18.5,
        text >=1.2.3 && <1.3,
        wai >=3.2.2 && <3.3,
        wai-app-static >=3.1.6 && <3.2,
        warp
