name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , obelisk-route
               , text
               , mmark
               , mmark-ext
               , modern-uri
               , yaml
               , reflex-dom-core
               , aeson
               , foldl
               , profunctors
               , snap
               , megaparsec
  exposed-modules:
    Backend
    Backend.Markdown
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
               , text
               , mmark
               , mmark-ext
               , modern-uri
               , yaml
               , reflex-dom-core
               , aeson
               , foldl
               , profunctors
               , snap
               , megaparsec
