cabal-version:       2.4

name:                doc
version:             0.1.0.0
license:             BSD-3-Clause
author:              Sridhar Ratnakumar
maintainer:          srid@srid.ca
category:            Web

executable rib-doc-site
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , aeson
                     , bytestring
                     , clay
                     , containers
                     , lucid
                     , pandoc
                     , profunctors
                     , rib
                     , shake
                     , text
  default-language:    Haskell2010
