cabal-version: 2.4
name: rib
version: 0.12.0.0
license: BSD-3-Clause
copyright: 2019 Sridhar Ratnakumar
maintainer: srid@srid.ca
author: Sridhar Ratnakumar
homepage: https://github.com/srid/rib#readme
bug-reports: https://github.com/srid/rib/issues
synopsis:
    Static site generator based on Shake
description:
    Haskell static site generator based on Shake, with a delightful development experience.
category: Web
build-type: Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/srid/rib

common library-common
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    build-depends:
        aeson >=1.4.2 && <1.5,
        async,
        base-noprelude >=4.12 && <4.14,
        binary >=0.8.6 && <0.9,
        clay >=0.13.3,
        cmdargs >=0.10.20 && <0.11,
        containers >=0.6.0 && <0.7,
        dhall >= 1.30 && <1.33,
        directory >= 1.0 && <2.0,
        exceptions,
        foldl,
        fsnotify >=0.3.0 && <0.4,
        filepath,
        lucid >=2.9.11 && <2.10,
        megaparsec >= 8.0,
        mmark >= 0.0.7.2,
        mmark-ext >= 0.2.1.0,
        modern-uri,
        mtl >=2.2.2 && <2.3,
        optparse-applicative >= 0.15,
        pandoc >=2.7 && <3,
        pandoc-types >=1.20,
        relude >= 0.6 && < 0.8,
        safe-exceptions,
        shake >= 0.18.5,
        text >=1.2.3 && <1.3,
        time,
        iso8601-time,
        wai >=3.2.2 && <3.3,
        wai-app-static >=3.1.6 && <3.2,
        warp

library
  import: library-common
  exposed-modules:
      Rib
      Rib.App
      Rib.Cli
      Rib.Watch
      Rib.Log
      Rib.Parser.Dhall
      Rib.Parser.MMark
      Rib.Parser.Pandoc
      Rib.Route
      Rib.Shake
      Rib.Extra.CSS
      Rib.Extra.OpenGraph
  other-modules:
      Rib.Server

test-suite rib-test 
  import: library-common
  type: exitcode-stdio-1.0
  hs-source-dirs: test 
  main-is: Spec.hs
  build-depends:
    base-noprelude >=4.12 && <4.14,
    relude,
    hspec,
    QuickCheck

