cabal-version:       2.4

name:                invoice-generator
version:             0.1.0.0
license:             BSD-3-Clause
author:              Sridhar Ratnakumar
maintainer:          srid@srid.ca
category:            Web

executable invoice-generator
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , rib
                     , clay
                     , shake
                     , lucid
                     , text
                     , time
  default-language:    Haskell2010
